--- a/src/zc/dojoform/resources/zc.dojo.css
+++ b/src/zc/dojoform/resources/zc.dojo.css
@@ -1,13 +1,17 @@
 
-.zc-fields,.zc-fieldset
+.zc-fields
 {
-  border: 1px solid;
+  border: 1px solid lightgrey;
+  margin: .5em; 
+  overflow: hidden;
+  }
+.zc-fieldset
+{
   margin: .5em; 
   overflow: hidden;
   }
 .zc-actions
 {
-  border: 1px solid; 
   margin: .5em;
   text-align: center;
 }
@@ -69,5 +73,5 @@
 .zc-right-fields
 {
   width: 40%;
-  float: right;
+  margin-left: 58%
   }
